(executable
 (name core_basic_window)
 (modules Core_basic_window)
 (libraries raylib))

(executable
 (name core_input_keys)
 (modules Core_input_keys)
 (libraries raylib))

(executable
 (name core_2d_camera)
 (modules Core_2d_camera)
 (libraries raylib))

(executable
 (name core_vr_simulator)
 (modules Core_vr_simulator)
 (libraries raylib))
(executable
 (name core_input_mouse)
 (modules Core_input_mouse)
 (libraries raylib))
