(executable
 (name core_basic_window)
 (modules Core_basic_window)
 (libraries raylib))

(executable
 (name core_input_keys)
 (modules Core_input_keys)
 (libraries raylib))

(executable
 (name core_2d_camera)
 (modules Core_2d_camera)
 (libraries raylib))

(executable
 (name core_vr_simulator)
 (modules Core_vr_simulator)
 (libraries raylib))
(executable
 (name core_input_mouse)
 (modules Core_input_mouse)
 (libraries raylib))

(executable
 (name core_input_mouse_wheel)
 (modules Core_input_mouse_wheel)
 (libraries raylib))

(executable
 (name core_2d_camera_platformer)
 (modules Core_2d_camera_platformer)
 (libraries raylib))

(executable
 (name core_3d_camera_first_person)
 (modules Core_3d_camera_first_person)
 (libraries raylib))

(executable
 (name core_3d_camera_free)
 (modules Core_3d_camera_free)
 (libraries raylib))

(executable
 (name core_3d_camera_mode)
 (modules Core_3d_camera_mode)
 (libraries raylib))
