(executable
 (name textures_image_loading)
 (modules Textures_image_loading)
 (libraries raylib))

(executable
 (name textures_rectangle)
 (modules Textures_rectangle)
 (libraries raylib))

(executable
 (name textures_bunnymark)
 (modules Textures_bunnymark)
 (libraries raylib))

(executable
 (name textures_bunnymark_ocaml_types)
 (modules Textures_bunnymark_ocaml_types)
 (libraries raylib))

(executable
 (name textures_srcrec_dstrec)
 (modules Textures_srcrec_dstrec)
 (libraries raylib))
