(executable
 (name apply_patch)
 (modules Apply_patch)
 (libraries patch))

(executable
 (name chmodx)
 (modules Chmodx)
 (libraries unix))

(rule
 (targets library_flags.sexp)
 (deps
  (:discover config/configure.exe))
 (action
  (run %{discover})))

(data_only_dirs vendor)

(rule
 (alias build-raylib)
 (targets libraylib.a dllraylib.so)
 (enabled_if
  (or
   (= %{system} linux)
   (= %{system} linux_elf)
   (= %{system} elf)))
 (deps
  (source_tree vendor/raylib)
  enable_formats.patch
  hotfixes.patch
  apply_patch.exe
  chmodx.exe)
 (action
  (no-infer
   (progn
    (run ./chmodx.exe vendor/raylib/src/config.h)
    (run ./apply_patch.exe enable_formats.patch)
    (run ./chmodx.exe vendor/raylib/src/platforms/rcore_desktop_glfw.c)
    (run ./chmodx.exe vendor/raylib/src/raudio.c)
    (run ./apply_patch.exe hotfixes.patch)
    (run make -C vendor/raylib/src RAYLIB_LIBTYPE=STATIC -j 8)
    (copy vendor/raylib/src/libraylib.a libraylib.a)
    (run make -C vendor/raylib/src clean)
    (run make -C vendor/raylib/src RAYLIB_LIBTYPE=SHARED -j 8)
    (copy vendor/raylib/src/libraylib.so.6.0.0 dllraylib.so)
    (run ./apply_patch.exe enable_formats.patch -r)
    (run ./apply_patch.exe hotfixes.patch -r)))))

(rule
 (alias build-raylib)
 (targets libraylib.a dllraylib.so)
 (enabled_if
  (= %{system} macosx))
 (deps
  (source_tree vendor/raylib)
  enable_formats.patch
  hotfixes.patch
  apply_patch.exe
  chmodx.exe)
 (action
  (no-infer
   (progn
    (run ./chmodx.exe vendor/raylib/src/config.h)
    (run ./apply_patch.exe enable_formats.patch)
    (run ./chmodx.exe vendor/raylib/src/platforms/rcore_desktop_glfw.c)
    (run ./chmodx.exe vendor/raylib/src/raudio.c)
    (run ./apply_patch.exe hotfixes.patch)
    (run make -C vendor/raylib/src RAYLIB_LIBTYPE=STATIC -j 8)
    (copy vendor/raylib/src/libraylib.a libraylib.a)
    (run make -C vendor/raylib/src clean)
    (run make -C vendor/raylib/src RAYLIB_LIBTYPE=SHARED -j 8)
    (copy vendor/raylib/src/libraylib.6.0.0.dylib dllraylib.so)
    (run ./apply_patch.exe enable_formats.patch -r)
    (run ./apply_patch.exe hotfixes.patch -r)))))

(rule
 (alias build-raylib)
 (targets libraylib.a dllraylib.dll)
 (enabled_if
  (and
   (= %{system} mingw64)
   (<> %{os_distribution} msys2)))
 (deps
  (source_tree vendor/raylib)
  enable_formats.patch
  hotfixes.patch
  mingw64.patch
  apply_patch.exe
  chmodx.exe)
 (action
  (no-infer
   (progn
    (run ./chmodx.exe vendor/raylib/src/config.h)
    (run ./apply_patch.exe enable_formats.patch)
    (run ./chmodx.exe vendor/raylib/src/platforms/rcore_desktop_glfw.c)
    (run ./chmodx.exe vendor/raylib/src/raudio.c)
    (run ./apply_patch.exe hotfixes.patch)
    (run ./chmodx.exe vendor/raylib/src/Makefile)
    (run ./apply_patch.exe mingw64.patch)
    (run make -C vendor/raylib/src RAYLIB_LIBTYPE=STATIC -j 8)
    (copy vendor/raylib/src/libraylib.a libraylib.a)
    (run make -C vendor/raylib/src clean)
    (run make -C vendor/raylib/src RAYLIB_LIBTYPE=SHARED -j 8)
    (copy vendor/raylib/src/raylib.dll dllraylib.dll)
    (run ./apply_patch.exe enable_formats.patch -r)
    (run ./apply_patch.exe hotfixes.patch -r)
    (run ./apply_patch.exe mingw64.patch -r)))))

(rule
 (alias build-raylib)
 (targets libraylib.a dllraylib.dll)
 (enabled_if
  (and
   (= %{system} mingw64)
   (= %{os_distribution} msys2)))
 (deps
  (source_tree vendor/raylib)
  enable_formats.patch
  hotfixes.patch
  msys2.patch
  apply_patch.exe
  chmodx.exe)
 (action
  (no-infer
   (progn
    (run ./chmodx.exe vendor/raylib/src/config.h)
    (run ./apply_patch.exe enable_formats.patch)
    (run ./chmodx.exe vendor/raylib/src/platforms/rcore_desktop_glfw.c)
    (run ./chmodx.exe vendor/raylib/src/raudio.c)
    (run ./apply_patch.exe hotfixes.patch)
    (run ./chmodx.exe vendor/raylib/src/Makefile)
    (run ./apply_patch.exe msys2.patch)
    (run make -C vendor/raylib/src RAYLIB_LIBTYPE=STATIC -j 8)
    (copy vendor/raylib/src/libraylib.a libraylib.a)
    (run make -C vendor/raylib/src clean)
    (run make -C vendor/raylib/src RAYLIB_LIBTYPE=SHARED -j 8)
    (copy vendor/raylib/src/raylib.dll dllraylib.dll)
    (run ./apply_patch.exe qenable_formats.patch -r)
    (run ./apply_patch.exe hotfixes.patch -r)
    (run ./apply_patch.exe msys2.patch -r)))))

(rule
 (alias build-raylib)
 (targets libraylib.a dllraylib.so)
 (enabled_if
  (or
   (= %{system} netbsd)
   (= %{system} freebsd)
   (= %{system} openbsd)
   (= %{system} bsd)
   (= %{system} bsd_elf)))
 (deps
  (source_tree vendor/raylib)
  enable_formats.patch
  hotfixes.patch
  freebsd.patch
  apply_patch.exe
  chmodx.exe)
 (action
  (no-infer
   (progn
    (run ./chmodx.exe vendor/raylib/src/config.h)
    (run ./apply_patch.exe enable_formats.patch)
    (run ./chmodx.exe vendor/raylib/src/platforms/rcore_desktop_glfw.c)
    (run ./chmodx.exe vendor/raylib/src/raudio.c)
    (run ./apply_patch.exe hotfixes.patch)
    (run ./chmodx.exe vendor/raylib/src/Makefile)
    (run ./apply_patch.exe freebsd.patch)
    (run gmake -C vendor/raylib/src RAYLIB_LIBTYPE=STATIC -j 8)
    (copy vendor/raylib/src/libraylib.a libraylib.a)
    (run gmake -C vendor/raylib/src clean)
    (run gmake -C vendor/raylib/src RAYLIB_LIBTYPE=SHARED -j 8)
    (copy vendor/raylib/src/libraylib.6.0.0.so dllraylib.so)
    (run ./apply_patch.exe enable_formats.patch -r)
    (run ./apply_patch.exe hotfixes.patch -r)
    (run ./apply_patch.exe freebsd.patch -r)))))
