; normal instructions for creating a library with c stub files
; c_flags.sexp and c_library_flags.sexp are created above

(library
 (public_name raylib.constants)
 (name raylib_generated_constants)
 (modules raylib_generated_constants)
 (preprocess
  (pps ppx_cstubs.merlin))
 (libraries ctypes ppx_cstubs))

(rule
 (targets raylib_generated_constants.ml)
 (deps
  (:first-dep raylib_constants.ml)
  (alias %{project_root}/src/c/build-raylib))
 (action
  (chdir
   %{project_root}
   (run
    %{bin:ppx_cstubs}
    %{first-dep}
    -o
    %{targets}
    -I
    %{project_root}/src/c/vendor/raylib/src))))

(library
 (package raygui)
 (name raygui_generated_constants)
 (modules raygui_generated_constants)
 (preprocess
  (pps ppx_cstubs.merlin))
 (libraries ctypes ppx_cstubs))

(rule
 (targets raygui_generated_constants.ml)
 (deps
  (:first-dep raygui_constants.ml)
  ; we build the constants together with the core lib
  ; otherwise some includes don't add up
  (alias %{project_root}/src/c/build-raylib))
 (action
  (chdir
   %{project_root}
   (run
    %{bin:ppx_cstubs}
    %{first-dep}
    -o
    %{targets}
    -I
    %{project_root}/src/c/vendor/raygui/src
    -I
    %{project_root}/src/c/vendor/raylib/src))))
