(library
 (name raylib_functions)
 (package raylib)
 (modules Raylib_functions)
 (flags
  (:standard -w -9-27))
 (libraries ctypes.stubs raylib_generated_constants raylib_generated_types))

(library
 (name raylib_math)
 (package raylib)
 (modules Raylib_math)
 (flags
  (:standard -w -9-27))
 (libraries ctypes.stubs raylib_generated_types))

(library
 (name raygui_functions)
 (package raygui)
 (modules Raygui_functions)
 (flags
  (:standard -w -9-27))
 (libraries ctypes.stubs raylib_generated_types raygui_generated_constants))

(library
 (name raylib_rlgl)
 (package raylib)
 (modules Raylib_rlgl)
 (flags
  (:standard -w -9-27))
 (libraries
  ctypes.stubs
  raylib_generated_constants
  raylib_generated_types
  rlgl_generated_types))
