(library
 (name raylib_c)
 (package raylib)
 (ctypes
  (external_library_name raylib)
  (build_flags_resolver
   (vendored
    (c_flags :standard "-I../vendor/raylib/src")
    (c_library_flags :standard)))
  (headers
   (include "raylib.h" "rlgl.h" "config.h" "raymath.h"))
  (type_description
   (instance Types)
   (functor Types))
  (function_description
   (instance Functions)
   (functor Functions))
  (generated_types Raylib_types_generated)
  (generated_entry_point Raylib_generated))
 (library_flags
  (:include ../library_flags.sexp))
 (foreign_archives ../raylib))
