(library
 (name raylib_callbacks_c)
 (package raylib-callbacks)
 (libraries raylib_c ctypes-foreign)
 (ctypes
  (external_library_name raylib)
  (build_flags_resolver
   (vendored
    (c_flags :standard "-I../vendor/raylib/src")
    (c_library_flags :standard)))
  (headers
   (include "raylib.h" "config.h"))
  (type_description
   (instance Types)
   (functor Functions))
  (function_description
   (concurrency unlocked)
   (instance Functions)
   (functor Functions))
  (generated_types Raylib_callbacks_types_generated)
  (generated_entry_point Raylib_callbacks_generated)
  (deps
   (source_tree ../vendor/raylib)))
 (library_flags
  (:include ../library_flags.sexp)))
