; Based partially on
;   https://github.com/avsm/ocaml-yaml/blob/master/types/stubgen/jbuild#L20

(executable
 (name generate_c_functions)
 (modules Generate_c_functions)
 (libraries ctypes.stubs raylib_functions))

(executable
 (name generate_ml_functions)
 (modules Generate_ml_functions)
 (libraries ctypes.stubs raylib_functions))
