; Based partially on
;   https://github.com/avsm/ocaml-yaml/blob/master/types/stubgen/jbuild#L20

(executable
 (name generate_c_functions)
 (modules Generate_c_functions)
 (libraries ctypes.stubs raylib_functions))

(executable
 (name generate_ml_functions)
 (modules Generate_ml_functions)
 (libraries ctypes.stubs raylib_functions))

(executable
 (name generate_c_math)
 (modules Generate_c_math)
 (libraries ctypes.stubs raylib_math))

(executable
 (name generate_ml_math)
 (modules Generate_ml_math)
 (libraries ctypes.stubs raylib_math))

(executable
 (name generate_c_gui)
 (modules Generate_c_gui)
 (libraries ctypes.stubs raygui_functions))

(executable
 (name generate_ml_gui)
 (modules Generate_ml_gui)
 (libraries ctypes.stubs raygui_functions))
