; Based partially on
;   https://github.com/avsm/ocaml-yaml/blob/master/types/stubgen/jbuild#L20

(executable
 (name generate_c_functions)
 (modules Generate_c_functions)
 (libraries ctypes.stubs raylib_functions))

(executable
 (name generate_ml_functions)
 (modules Generate_ml_functions)
 (libraries ctypes.stubs raylib_functions))

(executable
 (name generate_c_math)
 (modules Generate_c_math)
 (libraries ctypes.stubs raylib_math))

(executable
 (name generate_ml_math)
 (modules Generate_ml_math)
 (libraries ctypes.stubs raylib_math))

(executable
 (name generate_c_gui)
 (modules Generate_c_gui)
 (libraries ctypes.stubs raygui_functions))

(executable
 (name generate_ml_gui)
 (modules Generate_ml_gui)
 (libraries ctypes.stubs raygui_functions))

(executable
 (name generate_c_rlgl)
 (modules Generate_c_rlgl)
 (libraries ctypes.stubs raylib_rlgl))

(executable
 (name generate_c_raudio)
 (modules Generate_c_raudio)
 (libraries ctypes.stubs raylib_raudio))

(executable
 (name generate_ml_rlgl)
 (modules Generate_ml_rlgl)
 (libraries ctypes.stubs raylib_rlgl))

(executable
 (name generate_ml_raudio)
 (modules Generate_ml_raudio)
 (libraries ctypes.stubs raylib_raudio))

(executable
 (name generate_c_raylib_types)
 (modules Generate_c_raylib_types)
 (libraries ctypes.stubs raylib_types))

(executable
 (name generate_c_raygui_types)
 (modules Generate_c_raygui_types)
 (libraries ctypes.stubs raygui_types))

(executable
 (name generate_c_rlgl_types)
 (modules Generate_c_rlgl_types)
 (libraries ctypes.stubs rlgl_types))

(executable
 (name generate_c_raudio_types)
 (modules Generate_c_raudio_types)
 (libraries ctypes.stubs raudio_types))
