; RAYLIB

(library
 (name raylib_types)
 (package raylib)
 (modules Raylib_types)
 (flags
  (:standard -w -9-27))
 (libraries ctypes.stubs))

(library
 (name raylib_fixed_types)
 (package raylib)
 (modules Raylib_fixed_types Raylib_c_generated_types)
 (libraries ctypes raylib_types))

(rule
 (with-stdout-to
  raylib_c_generated_types.ml
  (run ../generate_types_step_2.exe)))

; RAUDIO

(library
 (name raudio_types)
 (package raylib-raudio)
 (modules Raudio_types)
 (flags
  (:standard -w -9-27))
 (libraries ctypes.stubs))

(library
 (name raudio_fixed_types)
 (package raylib-raudio)
 (modules Raudio_fixed_types Raudio_c_generated_types)
 (libraries ctypes raudio_types))

(rule
 (with-stdout-to
  raudio_c_generated_types.ml
  (run ../generate_raudio_types_step_2.exe)))

; RAYGUI

(library
 (name raygui_types)
 (package raygui)
 (modules Raygui_types)
 (flags
  (:standard -w -9-27))
 (libraries ctypes.stubs))

(library
 (name raygui_fixed_types)
 (package raygui)
 (modules Raygui_fixed_types Raygui_c_generated_types)
 (libraries ctypes raygui_types))

(rule
 (with-stdout-to
  raygui_c_generated_types.ml
  (run ../generate_raygui_types_step_2.exe)))

; RLGL

(library
 (name rlgl_types)
 (package raylib-rlgl)
 (modules Rlgl_types)
 (flags
  (:standard -w -9-27))
 (libraries ctypes.stubs))

(rule
 (with-stdout-to
  rlgl_c_generated_types.ml
  (run ../generate_rlgl_types_step_2.exe)))

(library
 (name rlgl_generated_types)
 (package raylib-rlgl)
 (modules Rlgl_generated_types Rlgl_c_generated_types)
 (flags
  (:standard -w -9-27))
 (libraries ctypes.stubs rlgl_types))
