(rule
 (with-stdout-to
  raylib_c_generated_types.ml
  (run ../generate_types_step_2.exe)))

(library
 (name raygui_types)
 (package raygui)
 (modules Raygui_types)
 (flags
  (:standard -w -9-27))
 (libraries ctypes.stubs))

(library
 (name raygui_fixed_types)
 (package raygui)
 (modules Raygui_fixed_types Raygui_c_generated_types)
 (libraries ctypes raygui_types))

(rule
 (with-stdout-to
  raygui_c_generated_types.ml
  (run ../generate_raygui_types_step_2.exe)))

(library
 (name rlgl_types)
 (package raylib)
 (modules Rlgl_types)
 (flags
  (:standard -w -9-27))
 (libraries ctypes.stubs))

