(library
 (name raylib_c_audio)
 (package raylib)
 (libraries raylib_core)
 (ctypes
  (external_library_name raylib)
  (build_flags_resolver
   (vendored
    (c_flags :standard "-I../../vendor/raylib/src")
    (c_library_flags :standard)))
  (headers
   (include "raylib.h" "rlgl.h" "config.h" "raymath.h"))
  (type_description
   (instance Types)
   (functor Functions))
  (function_description
   (concurrency unlocked)
   (instance Functions)
   (functor Functions))
  (generated_types Raylib_audio_types_generated)
  (generated_entry_point Raylib_audio_generated)
  (deps
   (source_tree ../../vendor/raylib))))
